# CV_BRAIN

./: README.md  main.py  pyproject.toml
app/: models.py
app/config/: llm.config.py  llmConfig.py  server.config.py  serverConfig.py
app/prompts/: system_prompt.py  template_registry.py  user_prompt.py
app/routes/: cv_routes.py
app/service/: latex_generator_services.py  latex_sanitizer.py  output_validator.py
